[package]
name = "fcjp"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking"] }
base64 = "0.22"
infer = "0.19"
clap = { version = "4.5", features = ["derive"] } # Current clap version (as of May 2024, check for latest)
